# ebpf-audit

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  build.rs  flake.nix
src/: data.rs  file.rs  main.rs  net.rs
src-bpf/: bpf.h  socket_connect.bpf.c  trace_open.bpf.c
