[package]
name = "ebpf-audit"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "A lightweight Linux system monitoring tool built with eBPF that tracks file access and network connections"
repository = "https://github.com/yourusername/ebpf-audit"
license = "GPL-3.0"
keywords = ["ebpf", "monitoring", "security", "audit", "linux"]
categories = ["command-line-utilities", "os::linux-apis"]

[dependencies]
anyhow = "1.0.100"
ctrlc = "3.5.1"
env_logger = "0.11.8"
libbpf-rs = "0.25.0"
libc = "0.2"
log = "0.4.28"
nix = { version = "0.30.1", features = ["process", "signal"] }
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread", "signal", "sync", "time"] }

[build-dependencies]
libbpf-cargo = "0.24"

[profile.release]
static-linking = true

[profile.dev]
static-linking = true
